# sentinel-stream

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
config/: config.yaml
notebooks/: exploration.ipynb
scripts/: cross_validate.py  download_data.py  generate_data.py  generate_plots.py  simulate_stream.py  train.py
src/sentinel_stream/: __init__.py
src/sentinel_stream/data/: ai4i_loader.py  generator.py  skab_loader.py
src/sentinel_stream/features/: engineering.py  spectral.py  transformer.py
src/sentinel_stream/models/: autoencoder.py  base.py  evaluation.py  isolation_forest.py  keras_classifier.py  xgboost_classifier.py
src/sentinel_stream/monitoring/: drift.py  metrics.py
src/sentinel_stream/serving/: api.py  schemas.py
src/sentinel_stream/utils/: config.py  logger.py
tests/: test_api.py  test_autoencoder.py  test_data_generator.py  test_drift.py  test_end_to_end.py  test_features.py  test_metrics.py  test_models.py  test_spectral.py  test_threshold_tuning.py
